--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -59,11 +59,13 @@
   display: none;
   flex-direction: column;
   flex: 1;
+  color: #222222;
+  font-size: 16px;
 }
 
 .property .address {
-  color: #9e9e9e;
-  font-size: 10px;
+  color: #454444;
+  font-size: 12px;
   margin-bottom: 10px;
   margin-top: 5px;
 }
